--- a/dubbo/pom.xml
+++ b/dubbo/pom.xml
@@ -335,6 +335,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
                 <executions>
                     <execution>
                         <id>attach-javadoc</id>
