--- a/pom.xml
+++ b/pom.xml
@@ -146,8 +146,8 @@
 
 		<!-- for maven compiler plugin -->
 		<maven_compiler_plugin_version>2.3.2</maven_compiler_plugin_version>
-		<java_source_version>1.6</java_source_version>
-		<java_target_version>1.6</java_target_version>
+		<java_source_version>1.7</java_source_version>
+		<java_target_version>1.7</java_target_version>
 		<file_encoding>UTF-8</file_encoding>
 
 		<maven_source_plugin_version>2.1.1</maven_source_plugin_version>
@@ -479,6 +479,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-source-plugin</artifactId>
+				<version>${maven_source_plugin_version}</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -724,4 +725,11 @@
 			<timezone>+8</timezone>
 		</developer>
 	</developers>
+
+    <distributionManagement>
+        <repository>
+            <id>${my.repository.id}</id>
+            <url>${my.repository.url}</url>
+        </repository>
+    </distributionManagement>
 </project>
